  version 2.8.3
- fixed nameplate restoring while in combat
- fixed artifact weapon handling to not accidentally prevent messages

  version 2.8.2
- fixed minor issue with item links of equipped items
- removed redundant code and cleaned up code

  version 2.8.1
- fixed wrong item count when getting an item while a similar item is already equipped

  version 2.8
- fixed error when caging pets
- completely reworked item detection to not be dependent on the games event order

  version 2.7.9
- improved message pattern matching to match exact messages
- improved currency display
- fixed mailbox detection after accepting queues while mailbox is open
- fixed fishing detection

  version 2.7.8
- fixed bug with item count when looting more than one of an item

  version 2.7.7
- fixed money displaying all money once after logging in
- fixed loot window being hidden if not all could be looted

  version 2.7.6
- fixed name being displayed for stackable items when only looting one

  version 2.7.5
- fixed bug with faulty item level on scaling items

  version 2.7.4
- fixed currency display

  version 2.7.3
- fixed display of similar items as multiple
- updated russian localization

  version 2.7.2
- fixed display of stackable items when no count shall be displayed
- display now uses default client font

  version 2.7.1
- fixed cyrillic letters not being displayed
- added russian translations

  version 2.7
- added option to hide nameplates while fishing
- added option to always show recipes found
- hiding rules now apply to all displays
- added localization support and german localization
- fixed hiding display at mailbox for non-default mailboxes
- fixed false amount display when the game fires events in a faulty order
- improved code to be more easily maintainable and expandable

  version 2.6.4
- added option for ignoring Honor
- added option to hide items at mailboxes
- fast autoloot ignores locked items
- re-ordered options in option panel
- minor code improvements
