@@ -1,4 +1,5 @@
   version 2.8.3
+- added option to select text outline
 - fixed nameplate restoring while in combat
 - fixed artifact weapon handling to not accidentally prevent messages
 
